force-app/main/default/objects/Rooms__c/fields/Bed_Available__c.field-meta.xml
<CustomField>
    <fullName>Bed_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bed Available</label>
    <type>Checkbox</type>
</CustomField>