force-app/main/default/objects/Rooms__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ac</fullName>
            </value>
            <value>
                <fullName>Non-Ac</fullName>
            </value>
            <value>
                <fullName>Wi-fi</fullName>
            </value>
            <value>
                <fullName>Tv</fullName>
            </value>
            <value>
                <fullName>Extra Bedding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>