force-app/main/default/objects/Rooms__c/fields/No_of_Beds_Available__c.field-meta.xml
<CustomField>
    <fullName>No_of_Beds_Available__c</fullName>
    <label>No of Beds Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>