force-app/main/default/objects/Rooms__c/fields/Nurse__c.field-meta.xml
<CustomField>
    <fullName>Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nurse</label>
    <referenceTo>Nurse__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>