force-app/main/default/objects/Rooms__c/fields/Total_no_of_beds__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_beds__c</fullName>
    <label>Total no of beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>