force-app/main/default/objects/Rooms__c/recordTypes/Air_Conditioned.recordType-meta.xml
<RecordType>
    <fullName>Air_Conditioned</fullName>
    <active>true</active>
    <label>Air Conditioned</label>
</RecordType>