force-app/main/default/objects/Rooms__c/recordTypes/Non_Ac.recordType-meta.xml
<RecordType>
    <fullName>Non_Ac</fullName>
    <active>true</active>
    <label>Non Ac</label>
</RecordType>